[gd_scene load_steps=9 format=3 uid="uid://ge0j4vxpnf0"]

[ext_resource type="Script" path="res://Scripts/StageSet.gd" id="1_ngmwi"]
[ext_resource type="Script" path="res://Scripts/RepoListLoad.gd" id="2_b28yp"]
[ext_resource type="Script" path="res://Scripts/InfoFetch.gd" id="2_u0y5e"]
[ext_resource type="Theme" uid="uid://cbw4j15uc8slj" path="res://TRESfiles/clear_tabs.tres" id="2_uyxk3"]
[ext_resource type="Resource" uid="uid://c05ppymvd68fl" path="res://TRESfiles/BrewData.tres" id="3_nuu3l"]
[ext_resource type="Texture2D" uid="uid://d3exvvwel0tyg" path="res://Assets/tab2.png" id="3_xl0fn"]
[ext_resource type="Theme" uid="uid://b6g3beayj4pv5" path="res://TRESfiles/margin_presets.tres" id="5_uonnr"]
[ext_resource type="Script" path="res://Scripts/InfoControl.gd" id="7_iy6bp"]

[node name="Node" type="Node"]
script = ExtResource("1_ngmwi")

[node name="StoreFetch" type="HTTPRequest" parent="."]
script = ExtResource("2_u0y5e")
data = ExtResource("3_nuu3l")

[node name="BrewBackground" type="TextureRect" parent="."]
visibility_layer = 512
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
stretch_mode = 5

[node name="Tab" type="TextureRect" parent="."]
clip_contents = true
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -576.0
offset_right = 576.0
offset_bottom = 64.0
grow_horizontal = 2
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource("3_xl0fn")
expand_mode = 3

[node name="BrewMusic" type="AudioStreamPlayer" parent="."]

[node name="CoreUI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_uyxk3")

[node name="HBoxContainer" type="HBoxContainer" parent="CoreUI"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -551.0
offset_bottom = 40.0
grow_horizontal = 0

[node name="RepoLoad" type="Button" parent="CoreUI/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
text = "Click to download HBAS information"

[node name="ListLoad" type="Button" parent="CoreUI/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
text = "Click to (re)load HBAS repository"

[node name="ScreenMargins" type="MarginContainer" parent="CoreUI"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 88.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("5_uonnr")

[node name="ScreenSplit" type="HSplitContainer" parent="CoreUI/ScreenMargins"]
layout_mode = 2
split_offset = -150
dragger_visibility = 2

[node name="InfoContainer" type="VSplitContainer" parent="CoreUI/ScreenMargins/ScreenSplit"]
layout_mode = 2
size_flags_horizontal = 3
dragger_visibility = 2
script = ExtResource("7_iy6bp")
data = ExtResource("3_nuu3l")

[node name="IconCorrector" type="CenterContainer" parent="CoreUI/ScreenMargins/ScreenSplit/InfoContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="BrewIcon" type="TextureRect" parent="CoreUI/ScreenMargins/ScreenSplit/InfoContainer/IconCorrector"]
layout_mode = 2

[node name="BrewLore" type="RichTextLabel" parent="CoreUI/ScreenMargins/ScreenSplit/InfoContainer"]
layout_mode = 2
size_flags_vertical = 3
bbcode_enabled = true
structured_text_bidi_override = 1

[node name="ListContainer" type="ScrollContainer" parent="CoreUI/ScreenMargins/ScreenSplit"]
layout_mode = 2
size_flags_horizontal = 3
follow_focus = true
vertical_scroll_mode = 2

[node name="ListMaker" type="VBoxContainer" parent="CoreUI/ScreenMargins/ScreenSplit/ListContainer"]
layout_direction = 2
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 3
script = ExtResource("2_b28yp")
data = ExtResource("3_nuu3l")

[node name="TextureProgressBar" type="TextureProgressBar" parent="."]
offset_top = 16.0
offset_right = 1152.0
offset_bottom = 80.0

[connection signal="request_completed" from="StoreFetch" to="StoreFetch" method="_on_request_completed"]
[connection signal="pressed" from="CoreUI/HBoxContainer/RepoLoad" to="StoreFetch" method="_on_repo_load_pressed"]
[connection signal="pressed" from="CoreUI/HBoxContainer/ListLoad" to="CoreUI/ScreenMargins/ScreenSplit/ListContainer/ListMaker" method="_on_list_load_pressed"]
